--- a/src/js/html/nurse_add.html
+++ b/src/js/html/nurse_add.html
@@ -7,21 +7,21 @@
           <div class="columns">
             <div class="colx2-left">
               <label>Registration Date</label>
-              <div data-dd4-datepicker data-ng-model="nurseAddCtrl.nurse.reg_date"></div>
+              <div data-dd4-datepicker data-ng-model="nurseAddCtrl.nurse.regDate"></div>
             </div>
             <p class="colx2-right">
               <label for="referralSource" class="">Referral Source</label>
-              <input type="text" data-ng-model="nurseAddCtrl.nurse.referral_source" id="referralSource" class="full-width">
+              <input type="text" data-ng-model="nurseAddCtrl.nurse.referralSource" id="referralSource" class="full-width">
             </p>
           </div>
           <div class="columns">
             <div class="colx2-left">
               <label for="firstName" class="">First Name</label>
-              <input type="text" data-ng-model="nurseAddCtrl.nurse.first_name" id="firstName" class="full-width">
+              <input type="text" data-ng-model="nurseAddCtrl.nurse.firstName" id="firstName" class="full-width">
             </div>
             <div class="colx2-right">
               <label for="lastName" class="">Last Name</label>
-              <input type="text" data-ng-model="nurseAddCtrl.nurse.last_name" id="lastName" class="full-width">
+              <input type="text" data-ng-model="nurseAddCtrl.nurse.lastName" id="lastName" class="full-width">
             </div>
           </div>
           <div class="columns">
@@ -31,7 +31,7 @@
             </div>
             <div class="colx2-right">
               <label for="addrUnit" class="">Unit #</label>
-              <input type="text" data-ng-model="nurseAddCtrl.nurse.addr_unit" id="addrUnit" size="4">
+              <input type="text" data-ng-model="nurseAddCtrl.nurse.addrUnit" id="addrUnit" size="4">
             </div>
           </div>
           <div class="columns">
@@ -41,21 +41,21 @@
             </p>
             <p class="colx2-right">
               <label for="phoneNumber" class="">Phone Number</label>
-              <input type="text" data-ng-model="nurseAddCtrl.nurse.phone_number" id="phoneNumber" class="full-width">
+              <input type="text" data-ng-model="nurseAddCtrl.nurse.phoneNumber" id="phoneNumber" class="full-width">
             </p>
           </div>
           <div class="columns">
             <p class="colx3-left">
               <label for="payRate" class="">Pay Rate</label>
-              <input type="number" data-ng-model="nurseAddCtrl.nurse.pay_rate" id="payRate" class="full-width">
+              <input type="number" data-ng-model="nurseAddCtrl.nurse.payRate" id="payRate" class="full-width">
             </p>
             <p class="colx3-center">
               <span class="label">Pay Rate < 2hr</span>
-              SOC <input type="number" data-ng-model="nurseAddCtrl.nurse.pay_rate_2hr_soc" size="5"/> FU <input type="number" data-ng-model="nurseAddCtrl.nurse.pay_rate_2hr_roc" size="5"/>
+              SOC <input type="number" data-ng-model="nurseAddCtrl.nurse.payRate2hrSoc" size="5"/> FU <input type="number" data-ng-model="nurseAddCtrl.nurse.payRate2hrRoc" size="5"/>
             </p>
             <p class="colx3-right">
               <label for="mileageRate" class="">Mileage Rate</label>
-              <input type="number" data-ng-model="nurseAddCtrl.nurse.mileage_rate" id="mileageRate" class="full-width">
+              <input type="number" data-ng-model="nurseAddCtrl.nurse.mileageRate" id="mileageRate" class="full-width">
             </p>
           </div>
           <label for="notes" class="">Notes</label>
