--- a/src/js/html/user_add.html
+++ b/src/js/html/user_add.html
@@ -8,11 +8,11 @@
           <div class="columns">
             <div class="colx3-left">
               <label for="firstName" class="">First Name</label>
-              <input type="text" data-ng-model="userAddCtrl.user.first_name" id="firstName" class="full-width">
+              <input type="text" data-ng-model="userAddCtrl.user.firstName" id="firstName" class="full-width">
             </div>
             <div class="colx3-center">
               <label for="lastName" class="">Last Name</label>
-              <input type="text" data-ng-model="userAddCtrl.user.last_name" id="lastName" class="full-width">
+              <input type="text" data-ng-model="userAddCtrl.user.lastName" id="lastName" class="full-width">
             </div>
             <div class="colx3-right">
               <label for="email" class="">Email Address</label>
