--- a/src/js/html/vendor_add.html
+++ b/src/js/html/vendor_add.html
@@ -23,55 +23,55 @@
           <div class="columns">
             <div class="colx2-left">
               <label for="phoneNumber">Office Number</label>
-              <input type="text" data-ng-model="vendorAddCtrl.vendor.phone_number" id="phoneNumber" class="full-width">
+              <input type="text" data-ng-model="vendorAddCtrl.vendor.phoneNumber" id="phoneNumber" class="full-width">
             </div>
             <p class="colx2-right">
               <label for="faxNumber">Fax Number</label>
-              <input type="text" data-ng-model="vendorAddCtrl.vendor.fax_number" id="faxNumber" class="full-width">
+              <input type="text" data-ng-model="vendorAddCtrl.vendor.faxNumber" id="faxNumber" class="full-width">
             </p>
           </div>
           <div class="columns">
             <div class="colx3-left">
               <label for="contactName">Contact Name</label>
-              <input type="text" data-ng-model="vendorAddCtrl.vendor.contact_name" id="contactName" class="full-width">
+              <input type="text" data-ng-model="vendorAddCtrl.vendor.contactName" id="contactName" class="full-width">
             </div>
             <div class="colx3-center">
               <label for="contactNumber">Contact Number</label>
-              <input type="text" data-ng-model="vendorAddCtrl.vendor.contact_number" id="contactNumber" class="full-width">
+              <input type="text" data-ng-model="vendorAddCtrl.vendor.contactNumber" id="contactNumber" class="full-width">
             </div>
             <div class="colx3-right">
               <label for="contactEmail">Contact Email</label>
-              <input type="text" data-ng-model="vendorAddCtrl.vendor.contact_email" id="contactEmail" class="full-width">
+              <input type="text" data-ng-model="vendorAddCtrl.vendor.contactEmail" id="contactEmail" class="full-width">
             </div>
           </div>
           <h2>Billing Hourly Rates</h2>
           <div class="columns">
             <p class="colx3-left">
               <label for="billingRate">Standard</label>
-              <input type="number" data-ng-model="vendorAddCtrl.vendor.billing_rate" id="billingRate" class="full-width">
+              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingRate" id="billingRate" class="full-width">
             </p>
             <p class="colx3-center">
               <label for="billingRate2HrSoc">&lt; 2hr SOC</label>
-              <input type="number" data-ng-model="vendorAddCtrl.vendor.billing_rate_2hr_soc" id="billingRate2HrSoc" class="full-width">
+              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingRate2hrSoc" id="billingRate2HrSoc" class="full-width">
             </p>
             <p class="colx3-right">
               <label for="billingRate2HrRoc">&lt; 2hr ROC</label>
-              <input type="number" data-ng-model="vendorAddCtrl.vendor.billing_rate_2hr_roc" id="billingRate2HrRoc" class="full-width">
+              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingRate2hrRoc" id="billingRate2HrRoc" class="full-width">
             </p>
           </div>
           <h2>Billing Flat Rates</h2>
           <div class="columns">
             <p class="colx3-left">
               <label for="billingFlat">Standard</label>
-              <input type="number" data-ng-model="vendorAddCtrl.vendor.billing_flat" id="billingFlat" class="full-width">
+              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingFlat" id="billingFlat" class="full-width">
             </p>
             <p class="colx3-center">
               <label for="billingFlat2HrSoc">&lt; 2hr SOC</label>
-              <input type="number" data-ng-model="vendorAddCtrl.vendor.billing_flat_2hr_soc" id="billingFlat2HrSoc" class="full-width">
+              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingFlat2hrSoc" id="billingFlat2HrSoc" class="full-width">
             </p>
             <p class="colx3-right">
               <label for="billingFlat2HrRoc">&lt; 2hr ROC</label>
-              <input type="number" data-ng-model="vendorAddCtrl.vendor.billing_flat_2hr_roc" id="billingFlat2HrRoc" class="full-width">
+              <input type="number" data-ng-model="vendorAddCtrl.vendor.billingFlat2hrRoc" id="billingFlat2HrRoc" class="full-width">
             </p>
           </div>
           <label for="notes">Notes</label>
