--- a/src/js/html/calendar.html
+++ b/src/js/html/calendar.html
@@ -39,7 +39,7 @@
                 <a href="#" class="day">{{day.date.getDate()}}</a>
                 <ul class="dot-events with-children-tip">
                   <li data-ng-repeat="notification in day.notifications" class="{{notification.color}}" title="{{notification.title}}">
-                    <a href="#{{notification.entity}}/{{notification.entity_id}}">{{notification.title}}</a>
+                    <a href="#{{notification.entity}}/{{notification.entityId}}">{{notification.title}}</a>
                   </li>
                 </ul>
                 <a data-ng-click="calCtrl.showAddDialog(day.date)" class="add-event">Add</a>
@@ -47,10 +47,10 @@
                   <li data-ng-repeat="appointment in day.appointments">
                     <a data-ng-click="calCtrl.edit(appointment)">
                       <div data-ng-if="!appointment.cancelled">
-                        <b>{{appointment.start | date:'shortTime'}}</b> {{appointment.patient_name}}
+                        <b>{{appointment.start | date:'shortTime'}}</b> {{appointment.patientName}}
                       </div>
                       <del data-ng-if="appointment.cancelled">
-                        <b>{{appointment.start | date:'shortTime'}}</b> {{appointment.patient_name}}
+                        <b>{{appointment.start | date:'shortTime'}}</b> {{appointment.patientName}}
                       </del>
                     </a>
                   </li>
@@ -77,7 +77,7 @@
         <div class="columns">
           <div class="colx2-left">
             <label>Patient</label>
-            <select data-ng-model="calCtrl.newAppointment.patient_id"
+            <select data-ng-model="calCtrl.newAppointment.patientId"
                     data-ng-options="patient.id as patient.name for patient in calCtrl.patients | orderBy:'name'">
             </select>
           </div>
@@ -86,8 +86,8 @@
           </div>
           <div class="colx1-left">
             <label>Nurse</label>
-            <select data-ng-model="calCtrl.newAppointment.nurse_id"
-                    data-ng-options="nurse.id as nurse.full_name for nurse in calCtrl.nurses | orderBy:'full_name'">
+            <select data-ng-model="calCtrl.newAppointment.nurseId"
+                    data-ng-options="nurse.id as nurse.fullName for nurse in calCtrl.nurses | orderBy:'full_name'">
             </select>
           </div>
           <div class="colx1-left">
@@ -127,7 +127,7 @@
         <div class="columns">
           <div class="colx2-left">
             <label>Patient</label>
-            <select data-ng-model="calCtrl.editAppointment.patient_id"
+            <select data-ng-model="calCtrl.editAppointment.patientId"
                     data-ng-options="patient.id as patient.name for patient in calCtrl.patients | orderBy:'name'">
             </select>
           </div>
@@ -136,8 +136,8 @@
           </div>
         </div>
         <label>Nurse</label>
-        <select data-ng-model="calCtrl.editAppointment.nurse_id"
-                data-ng-options="nurse.id as nurse.full_name for nurse in calCtrl.nurses | orderBy:'full_name'">
+        <select data-ng-model="calCtrl.editAppointment.nurseId"
+                data-ng-options="nurse.id as nurse.fullName for nurse in calCtrl.nurses | orderBy:'full_name'">
         </select>
         <div class="columns">
           <div class="colx2-left">
@@ -148,7 +148,7 @@
             <input type="checkbox" data-ng-model="calCtrl.editAppointment.cancelled"/><label>Cancelled</label>
             <span data-ng-show="calCtrl.editAppointment.cancelled">
               <label>Reason</label>
-              <input type="text" data-ng-model="calCtrl.editAppointment.cancel_reason"/>
+              <input type="text" data-ng-model="calCtrl.editAppointment.cancelReason"/>
             </span>
           </div>
         </div>
