--- a/src/js/html/patient.html
+++ b/src/js/html/patient.html
@@ -14,84 +14,84 @@
         <div data-ng-if="patientCtrl.selectedTab == patientCtrl.tabs.general">
           <div class="block-content form">
             <label for="referralResolutionId">Patient Status</label>
-            <select data-ng-model="patientCtrl.patient.referral_resolution_id" id="referralResolutionId" class="full-width" data-on-change="patientCtrl.update('referral_resolution_id')"
+            <select data-ng-model="patientCtrl.patient.referralResolutionId" id="referralResolutionId" class="full-width" data-on-change="patientCtrl.update('referralResolutionId')"
                     data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.PATIENT_STATE) | orderBy:'name'">
             </select>
             <label for="name">Name</label>
             <input type="text" data-ng-model="patientCtrl.patient.name" id="name" class="full-width" data-on-change="patientCtrl.update('name')">
             <label>Date of Birth</label>
-            <div data-dd4-datepicker="patientCtrl.update('d_o_b')" data-ng-model="patientCtrl.patient.d_o_b"></div>
+            <div data-dd4-datepicker="patientCtrl.update('dOB')" data-ng-model="patientCtrl.patient.dOB"></div>
             <label>Service Address</label>
-            <div data-dd4-address="patientCtrl.update('service_address')" data-ng-model="patientCtrl.patient.service_address" class="full-width"></div>
+            <div data-dd4-address="patientCtrl.update('serviceAddress')" data-ng-model="patientCtrl.patient.serviceAddress" class="full-width"></div>
             <label for="serviceAddrUnit">Unit #</label>
-            <input type="text" data-ng-model="patientCtrl.patient.service_address.unit" id="serviceAddrUnit" size="4" data-on-change="patientCtrl.update('service_address')">
+            <input type="text" data-ng-model="patientCtrl.patient.serviceAddress.unit" id="serviceAddrUnit" size="4" data-on-change="patientCtrl.update('serviceAddress')">
             <label for="phoneNumber">Primary Phone Number</label>
-            <input type="text" data-ng-model="patientCtrl.patient.phone_number" id="phoneNumber" size="20" data-on-change="patientCtrl.update('phone_number')">
-            <select data-ng-model="patientCtrl.patient.primary_phone_type_id" id="primaryPhoneTypeId" data-on-change="patientCtrl.update('primary_phone_type_id')"
+            <input type="text" data-ng-model="patientCtrl.patient.phoneNumber" id="phoneNumber" size="20" data-on-change="patientCtrl.update('phoneNumber')">
+            <select data-ng-model="patientCtrl.patient.primaryPhoneTypeId" id="primaryPhoneTypeId" data-on-change="patientCtrl.update('primaryPhoneTypeId')"
                     data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.PHONE_TYPE) | orderBy:'name'">
             </select>
             <label for="altContactNumber">Alt Contact Number</label>
-            <input type="text" data-ng-model="patientCtrl.patient.alt_contact_number" id="altContactNumber" size="20" data-on-change="patientCtrl.update('alt_contact_number')">
-            <select data-ng-model="patientCtrl.patient.alt_phone_type_id" id="altPhoneTypeId" data-on-change="patientCtrl.update('alt_phone_type_id')"
+            <input type="text" data-ng-model="patientCtrl.patient.altContactNumber" id="altContactNumber" size="20" data-on-change="patientCtrl.update('altContactNumber')">
+            <select data-ng-model="patientCtrl.patient.altPhoneTypeId" id="altPhoneTypeId" data-on-change="patientCtrl.update('altPhoneTypeId')"
                     data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.PHONE_TYPE) | orderBy:'name'">
             </select>
             <label for="emergencyContact">Emergency Contact</label>
-            <input type="text" data-ng-model="patientCtrl.patient.emergency_contact" id="emergencyContact" class="full-width" data-on-change="patientCtrl.update('emergency_contact')">
+            <input type="text" data-ng-model="patientCtrl.patient.emergencyContact" id="emergencyContact" class="full-width" data-on-change="patientCtrl.update('emergencyContact')">
             <label for="emergencyContactPhone">Emergency Contact Number</label>
-            <input type="text" data-ng-model="patientCtrl.patient.emergency_contact_phone" id="emergencyContactPhone" size="20" data-on-change="patientCtrl.update('emergency_contact_phone')">
-            <select data-ng-model="patientCtrl.patient.emergency_contact_phone_type_id" id="emergencyContactPhoneTypeId" data-on-change="patientCtrl.update('emergency_contact_phone_type_id')"
+            <input type="text" data-ng-model="patientCtrl.patient.emergencyContactPhone" id="emergencyContactPhone" size="20" data-on-change="patientCtrl.update('emergencyContactPhone')">
+            <select data-ng-model="patientCtrl.patient.emergencyContactPhoneTypeId" id="emergencyContactPhoneTypeId" data-on-change="patientCtrl.update('emergencyContactPhoneTypeId')"
                     data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.PHONE_TYPE) | orderBy:'name'">
             </select>
             <label>Referral Date</label>
-            <div data-dd4-datepicker="patientCtrl.update('referral_date')" data-ng-model="patientCtrl.patient.referral_date"></div>
+            <div data-dd4-datepicker="patientCtrl.update('referralDate')" data-ng-model="patientCtrl.patient.referralDate"></div>
             <label for="billingId">Billing Vendor</label>
-            <select data-ng-model="patientCtrl.patient.billing_id" id="billingId" class="full-width" data-on-change="patientCtrl.update('billing_id')"
+            <select data-ng-model="patientCtrl.patient.billingId" id="billingId" class="full-width" data-on-change="patientCtrl.update('billingId')"
                     data-ng-options="vendor.id as vendor.name for vendor in intakeCtrl.vendors | orderBy:'name'">
             </select>
             <label for="referralSourceId">Referral Source</label>
-            <select data-ng-model="patientCtrl.patient.referral_source_id" id="referralSourceId" class="full-width" data-on-change="patientCtrl.update('referral_source_id')"
+            <select data-ng-model="patientCtrl.patient.referralSourceId" id="referralSourceId" class="full-width" data-on-change="patientCtrl.update('referralSourceId')"
                     data-ng-options="vendor.id as vendor.name for vendor in intakeCtrl.vendors | orderBy:'name'">
             </select>
             <label for="mrNum">Medical Record #</label>
-            <input type="text" data-ng-model="patientCtrl.patient.mr_num" id="mrNum" class="full-width" data-on-change="patientCtrl.update('mr_num')">
+            <input type="text" data-ng-model="patientCtrl.patient.mrNum" id="mrNum" class="full-width" data-on-change="patientCtrl.update('mrNum')">
             <label for="dianosisId">Dianosis</label>
-            <select data-ng-model="patientCtrl.patient.dianosis_id" id="dianosisId" class="full-width" data-on-change="patientCtrl.update('dianosis_id')"
+            <select data-ng-model="patientCtrl.patient.dianosisId" id="dianosisId" class="full-width" data-on-change="patientCtrl.update('dianosisId')"
                     data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.DIANOSIS) | orderBy:'name'">
             </select>
             <label for="therapyTypeId">Therapy Type</label>
-            <select data-ng-model="patientCtrl.patient.therapy_type_id" id="therapyTypeId" class="full-width" data-on-change="patientCtrl.update('therapy_type_id')"
+            <select data-ng-model="patientCtrl.patient.therapyTypeId" id="therapyTypeId" class="full-width" data-on-change="patientCtrl.update('therapyTypeId')"
                     data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.THERAPY_TYPE) | orderBy:'name'">
             </select>
             <label for="rx">Pt Rx</label>
             <input type="text" data-ng-model="patientCtrl.patient.rx" id="rx" class="full-width" data-on-change="patientCtrl.update('rx')">
             <label for="iVAccessId">IV Access</label>
-            <select data-ng-model="patientCtrl.patient.i_v_access_id" id="iVAccessId" class="full-width" data-on-change="patientCtrl.update('i_v_access_id')"
+            <select data-ng-model="patientCtrl.patient.iVAccessId" id="iVAccessId" class="full-width" data-on-change="patientCtrl.update('iVAccessId')"
                     data-ng-options="generalData.id as generalData.name for generalData in generalDataService.list(GeneralData.IV_ACCESS) | orderBy:'name'">
             </select>
               <p><span class="label">Patient Type</span>
               <div data-ng-repeat="generalData in generalDataService.list(GeneralData.PATIENT_STATUS) | orderBy:'rank'">
-                <input type="radio" data-ng-model="intakeCtrl.patient.patient_status_id" value="{{generalData.id}}">
+                <input type="radio" data-ng-model="intakeCtrl.patient.patientStatusId" value="{{generalData.id}}">
                 <label>{{generalData.name}}</label>
               </div>
               </p>
             <label>Start Date</label>
-            <div data-dd4-datepicker="patientCtrl.update('start_of_care_date')" data-ng-model="patientCtrl.patient.start_of_care_date"></div>
+            <div data-dd4-datepicker="patientCtrl.update('startOfCareDate')" data-ng-model="patientCtrl.patient.startOfCareDate"></div>
             <label>Est. Last Day of Serice</label>
-            <div data-dd4-datepicker="patientCtrl.update('est_last_day_of_service')" data-ng-model="patientCtrl.patient.est_last_day_of_service"></div>
+            <div data-dd4-datepicker="patientCtrl.update('estLastDayOfService')" data-ng-model="patientCtrl.patient.estLastDayOfService"></div>
             <p><span class="label">Labs? [Frequency]</span>
               <input type="checkbox">
-              <input type="text" data-ng-model="patientCtrl.patient.labs_frequency" id="labsFrequency" data-on-change="patientCtrl.update('labs_frequency')">
+              <input type="text" data-ng-model="patientCtrl.patient.labsFrequency" id="labsFrequency" data-on-change="patientCtrl.update('labsFrequency')">
             </p>
             <label>1st Re-certification</label>
-            <div data-dd4-datepicker="patientCtrl.update('first_recert_due')" data-ng-model="patientCtrl.patient.first_recert_due"></div>
+            <div data-dd4-datepicker="patientCtrl.update('firstRecertDue')" data-ng-model="patientCtrl.patient.firstRecertDue"></div>
             <label>DC Date</label>
-            <div data-dd4-datepicker="patientCtrl.update('d_c_date')" data-ng-model="patientCtrl.patient.d_c_date"></div>
+            <div data-dd4-datepicker="patientCtrl.update('dCDate')" data-ng-model="patientCtrl.patient.dCDate"></div>
             <label for="infoInSOS">PT Info in SOS?</label>
-            <input type="checkbox" class="full-width" data-ng-model="patientCtrl.patient.info_in_s_o_s" id="infoInSOS" value="true" checked="" data-on-change="patientCtrl.update('info_in_s_o_s')">
+            <input type="checkbox" class="full-width" data-ng-model="patientCtrl.patient.infoInSOS" id="infoInSOS" value="true" checked="" data-on-change="patientCtrl.update('infoInSOS')">
             <label for="schedulingPreference">Scheduling Preference</label>
-            <input type="text" data-ng-model="patientCtrl.patient.scheduling_preference" id="schedulingPreference" class="full-width" data-on-change="patientCtrl.update('scheduling_preference')">
+            <input type="text" data-ng-model="patientCtrl.patient.schedulingPreference" id="schedulingPreference" class="full-width" data-on-change="patientCtrl.update('schedulingPreference')">
             <label for="referralNote">Notes</label>
-            <textarea data-ng-model="patientCtrl.patient.referral_note" id="referralNote" rows="10" class="full-width" data-on-change="patientCtrl.update('referral_note')"></textarea>
+            <textarea data-ng-model="patientCtrl.patient.referralNote" id="referralNote" rows="10" class="full-width" data-on-change="patientCtrl.update('referralNote')"></textarea>
           </div>
         </div>
         <div data-ng-if="patientCtrl.selectedTab == patientCtrl.tabs.map" style="height: 480px;">
@@ -100,7 +100,7 @@
           </div>
           <ol class="map-list">
             <li data-ng-repeat="nurse in patientCtrl.closestNurses">
-              {{nurse.full_name}} ({{nurse.distance}} miles)
+              {{nurse.fullName}} ({{nurse.distance}} miles)
             </li>
           </ol>
         </div>
