--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -55,107 +55,112 @@
     <script src="js/lib/angular-route.min.js"></script>
 
     <!-- Digital D4 -->
-    <script src="js/dd4common.js"></script>
+    <script src="js/dd4-common-min.js"></script>
     <script src="js/iis.js"></script>
   </head>
 
-  <body data-ng-app="iis" data-ng-controller="IISCtrl as iisCtrl">
+  <body data-ng-app="iis" data-ng-controller="DD4AppCtrl as appCtrl">
+    <dd4-login data-ng-if="!appCtrl.globalData.user" data-label="Ledger" data-allow-signup="true"></dd4-login>
+    <div data-ng-if="appCtrl.globalData.user" data-ng-controller="IISCtrl as iisCtrl">
 
-    <!-- Header -->
+      <!-- Header -->
 
-    <!-- Server status -->
-    <header><div class="container_12">
-      <p id="skin-name"><small>IISOS</small> <strong>0.75</strong></p>
-      <div class="server-info">Server: <strong>Tomcat</strong></div>
-      <div class="server-info">Java: <strong>1.8</strong></div>
-    </div></header>
-    <!-- End server status -->
+      <!-- Server status -->
+      <header>
+        <div class="container_12">
+          <p id="skin-name"><small>IISOS</small> <strong>0.75</strong></p>
+          <div class="server-info">Server: <strong>Tomcat</strong></div>
+          <div class="server-info">Java: <strong>1.8</strong></div>
+        </div>
+      </header>
+      <!-- End server status -->
 
-    <!-- Always visible control bar -->
-    <nav id="main-nav">
-      <ul class="container_12">
-        <li class="dashboard"><a href="#dashboard" title="Home">Home</a>
-          <ul>
-            <li><a href="#dashboard" title="Dashboard">Dashboard</a></li>
-            <li><a href="#profile" title="My Profile">My Profile</a></li>
-          </ul>
-        </li>
-        <li class="patients"><a href="#patients" title="Patients">Patients</a>
-          <ul>
-            <li><a href="#patients" title="Patients">Patients</a></li>
-            <li><a href="#pendass" title="Pending Assessement">Pending Assessement</a></li>
-            <li><a href="#intake" title="New Intake">New Intake</a></li>
-            <li><a href="#pintake" title="Pending Intakes">Pending Intakes</a></li>
-          </ul>
-        </li>
-        <li class="users"><a href="#users" title="Users">Users</a>
-          <ul>
-            <li><a href="#users" title="Users">Users</a></li>
-            <li><a href="#user_add" title="Add User">Add User</a></li>
-          </ul>
-        </li>
-        <li class="billing"><a href="#billable" title="Billing">Billing</a>
-          <ul>
-            <li><a href="#billable" title="Billable">Billable</a></li>
-            <li><a href="#payable" title="Payable">Payable</a></li>
-            <li><a href="#unpaid_invoices" title="Unpaid Invoices">Unpaid Invoices</a></li>
-            <li><a href="#paid_invoices" title="Paid Invoices">Paid Invoices</a></li>
-            <li><a href="#pay_history" title="Pay History">Pay History</a></li>
-            <li><a href="#vendors" title="Vendors">Vendors</a></li>
-            <li><a href="#vendor_add" title="Add Vendor">Add Vendor</a></li>
-          </ul>
-        </li>
-        <li class="nurses" title="Nurses"><a href="#nurses" title="">Nurses</a>
-          <ul>
-            <li><a href="#nurses" title="Nurses">Nurses</a></li>
-            <li><a href="#nurse_add" title="Add Nurse">Add Nurse</a></li>
-            <li><a href="#license_alert" title="License Alert">License Alert</a></li>
-            <li><a href="#unconfirmed" title="Unconfirmed Appointments">Unconfirmed Appointments</a></li>
-          </ul>
-        </li>
-        <li class="reports"><a href="#reports" title="Reports">Reports</a>
-          <ul>
-            <li><a href="#reports" title="Reports">Reports</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-    <!-- End control bar -->
+      <!-- Always visible control bar -->
+      <nav id="main-nav">
+        <ul class="container_12">
+          <li class="dashboard"><a href="#dashboard" title="Home">Home</a>
+            <ul>
+              <li><a href="#dashboard" title="Dashboard">Dashboard</a></li>
+              <li><a href="#profile" title="My Profile">My Profile</a></li>
+            </ul>
+          </li>
+          <li class="patients"><a href="#patients" title="Patients">Patients</a>
+            <ul>
+              <li><a href="#patients" title="Patients">Patients</a></li>
+              <li><a href="#pendass" title="Pending Assessement">Pending Assessement</a></li>
+              <li><a href="#intake" title="New Intake">New Intake</a></li>
+              <li><a href="#pintake" title="Pending Intakes">Pending Intakes</a></li>
+            </ul>
+          </li>
+          <li class="users"><a href="#users" title="Users">Users</a>
+            <ul>
+              <li><a href="#users" title="Users">Users</a></li>
+              <li><a href="#user_add" title="Add User">Add User</a></li>
+            </ul>
+          </li>
+          <li class="billing"><a href="#billable" title="Billing">Billing</a>
+            <ul>
+              <li><a href="#billable" title="Billable">Billable</a></li>
+              <li><a href="#payable" title="Payable">Payable</a></li>
+              <li><a href="#unpaid_invoices" title="Unpaid Invoices">Unpaid Invoices</a></li>
+              <li><a href="#paid_invoices" title="Paid Invoices">Paid Invoices</a></li>
+              <li><a href="#pay_history" title="Pay History">Pay History</a></li>
+              <li><a href="#vendors" title="Vendors">Vendors</a></li>
+              <li><a href="#vendor_add" title="Add Vendor">Add Vendor</a></li>
+            </ul>
+          </li>
+          <li class="nurses" title="Nurses"><a href="#nurses" title="">Nurses</a>
+            <ul>
+              <li><a href="#nurses" title="Nurses">Nurses</a></li>
+              <li><a href="#nurse_add" title="Add Nurse">Add Nurse</a></li>
+              <li><a href="#license_alert" title="License Alert">License Alert</a></li>
+              <li><a href="#unconfirmed" title="Unconfirmed Appointments">Unconfirmed Appointments</a></li>
+            </ul>
+          </li>
+          <li class="reports"><a href="#reports" title="Reports">Reports</a>
+            <ul>
+              <li><a href="#reports" title="Reports">Reports</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+      <!-- End control bar -->
 
-    <!-- Sub nav -->
-    <div id="sub-nav"><div class="container_12">
-      <a href="#" title="Help" class="nav-button"><b>Help</b></a>
-      <form id="search-form" name="search-form" method="post" action="search.html">
-        <input type="text" name="s" id="s" value="" title="Search admin..." autocomplete="off">
-      </form>
-    </div></div>
-    <!-- End sub nav -->
+      <!-- Sub nav -->
+      <div id="sub-nav"><div class="container_12">
+        <a href="#" title="Help" class="nav-button"><b>Help</b></a>
+        <form id="search-form" name="search-form" method="post" action="search.html">
+          <input type="text" name="s" id="s" value="" title="Search admin..." autocomplete="off">
+        </form>
+      </div></div>
+      <!-- End sub nav -->
 
-    <!-- Status bar -->
-    <div id="status-bar"><div class="container_12">
+      <!-- Status bar -->
+      <div id="status-bar"><div class="container_12">
 
-      <ul id="status-infos">
-        <li class="spaced">Logged in as: <strong>{{iisCtrl.sharedData.user.email}}</strong></li>
-        <li><a data-ng-click="iisCtrl.logout()" class="button red" title="Logout"><span class="smaller">LOGOUT</span></a></li>
-      </ul>
+        <ul id="status-infos">
+          <li class="spaced">Logged in as: <strong>{{iisCtrl.sharedData.user.email}}</strong></li>
+          <li><a data-ng-click="iisCtrl.logout()" class="button red" title="Logout"><span class="smaller">LOGOUT</span></a></li>
+        </ul>
 
-    </div></div>
-    <!-- End status bar -->
+      </div></div>
+      <!-- End status bar -->
 
-    <div id="header-shadow"></div>
-    <!-- End header -->
+      <div id="header-shadow"></div>
+      <!-- End header -->
 
-    <!-- Content -->
-    <article class="container_12">
-      <div data-ng-view></div>
-    </article>
-    <!-- End content -->
+      <!-- Content -->
+      <article class="container_12">
+        <div data-ng-view></div>
+      </article>
+      <!-- End content -->
 
-    <footer>
-      <div class="float-right">
-        <a href="#top" class="button"><img src="images/icons/fugue/navigation-090.png" width="16" height="16">Page top</a>
-      </div>
-    </footer>
+      <footer>
+        <div class="float-right">
+          <a href="#top" class="button"><img src="images/icons/fugue/navigation-090.png" width="16" height="16">Page top</a>
+        </div>
+      </footer>
+    </div>
 
     <!--
 
